<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:padding="15dp"
        android:text="@string/title"
        android:textColor="#FBFFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="145dp"
        android:text="@string/description"
        android:textColor="#D5424242"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/raport"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/raport_btn"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_btn"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/raport"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/settings_btn"
        android:textColor="#0D0C0C"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raport" />

    <Button
        android:id="@+id/info"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/info_btn"
        android:textColor="#141313"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/add" />

</androidx.constraintlayout.widget.ConstraintLayout>