<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:padding="15dp"
        android:text="@string/title"
        android:textColor="#FBFFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:text="@string/add"
        android:textColor="#D5424242"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/vehicle"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/vehicle_select"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/vehicles"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="20sp" />

            <Button
                android:id="@+id/date"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F44336"
                android:text="@string/select_btn"
                android:textColor="#090808"
                android:textSize="10sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/travel"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/travel_edit"
                android:layout_width="99dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/km"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp">

            <Space
                android:layout_width="206dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_btn"
                android:textSize="10sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />

            <Space
                android:layout_width="154dp"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>